改行コードを改行タグに変更処理

--- a/app/views/customers/line_message/_staff.html.erb
+++ b/app/views/customers/line_message/_staff.html.erb
@@ -4,6 +4,6 @@
     <span class="direct-chat-name float-right"><%= @company.name %>&nbsp;</span>
   </div>
   <div class="w-10 direct-chat-text float-right text-right bg-white" style="margin-right: 0px;">
-    <%= message.message.to_s %>
+    <%= br message.message.to_s %>
   </div>
 </div>
