デザイン調整

--- a/app/views/customers/index.html.erb
+++ b/app/views/customers/index.html.erb
@@ -18,38 +18,47 @@
           <div class="col-md-3 mb-2">
             <div class="input-group">
               <div class="input-group-prepend">
-                <span class="input-group-text clear" data-target_id="searchNameText">C</span>
+                <span class="input-group-text"><i class="fas fa-smile"></i></span>
               </div>
               <%= f.text_field :name, { autocomplete: "off", class: 'form-control', placeholder: '名前', maxlength: 20, id: 'searchNameText' } %>
+              <div class="input-group-append">
+                <span class="input-group-text clear" data-target_id="searchNameText">C</span>
+              </div>
             </div>
           </div>
 
           <div class="col-md-3 mb-2">
             <div class="input-group">
               <div class="input-group-prepend">
-                <span class="input-group-text clear" data-target_id="searchAgeFromText">C</span>
+                <span class="input-group-text"><i class="fas fa-sort-numeric-up-alt"></i></span>
               </div>
               <%= f.text_field :from_age, { autocomplete: "off", class: 'form-control', placeholder: '年齢（以上）', maxlength: 3, id: 'searchAgeFromText', onKeyup: "this.value=this.value.replace(/[^0-9]+/i,'')" } %>
+              <div class="input-group-append">
+                <span class="input-group-text clear" data-target_id="searchAgeFromText">C</span>
+              </div>
             </div>
           </div>
 
           <div class="col-md-3 mb-2">
             <div class="input-group">
               <div class="input-group-prepend">
-                <span class="input-group-text clear" data-target_id="searchAgeToText">C</span>
+                <span class="input-group-text"><i class="fas fa-sort-numeric-down-alt"></i></span>
               </div>
               <%= f.text_field :to_age, { autocomplete: "off", class: 'form-control', placeholder: '年齢（以下）', maxlength: 3, id: 'searchAgeToText', onKeyup: "this.value=this.value.replace(/[^0-9]+/i,'')" } %>
+              <div class="input-group-append">
+                <span class="input-group-text clear" data-target_id="searchAgeToText">C</span>
+              </div>
             </div>
           </div>
 
           <div class="col-md-3 mb-2">
             <div class="input-group">
               <div class="input-group-prepend">
-                <span class="input-group-text clear" data-target_id="genderListSelect">C</span>
+                <span class="input-group-text"><i class="fas fa-venus-mars"></i></span>
               </div>
               <%= f.select :gender, Customer::gender_select_arr, { include_blank: '' }, class: 'custom-select', id: 'genderListSelect' %>
               <div class="input-group-append">
-                <span class="input-group-text"><i class="fas fa-venus-mars"></i></span>
+                <span class="input-group-text clear" data-target_id="genderListSelect">C</span>
               </div>
             </div>
           </div>
