--- a/app/views/customers/index.html.erb
+++ b/app/views/customers/index.html.erb
@@ -110,8 +110,9 @@
               <td><%= customer.formatted_tel_number.to_s %></td>
               <td><%= customer.birthday.strftime("%Y年%m月%d日") if customer.birthday %></td>
               <td>
-                <% if customer.user.try(:unread_user_line_message?) %>
-                  <%= link_to '未読あり', new_line_message_customer_path(@company.code, customer), class: 'btn btn-sm btn-success float-left' %>
+                <% user = customer.user %>
+                <% if user.try(:unread_user_line_message?) %>
+                  <%= link_to user.unread_user_last_line_message_content, new_line_message_customer_path(@company.code, customer), class: 'btn btn-sm btn-success float-left' %>
                 <% end %>
               </td>
             </tr>
