デザイン調整

--- a/app/views/customers/index.html.erb
+++ b/app/views/customers/index.html.erb
@@ -101,7 +101,7 @@
       <table class="table table-bordered">
         <thead>
           <tr>
-            <th style="width: 10px">詳細</th>
+            <th style="width: 10px" class="text-nowrap">詳細</th>
             <th><%= Customer.human_attribute_name(:name) %></th>
             <th><%= Customer.human_attribute_name(:name_kana) %></th>
             <th><%= Customer.human_attribute_name(:gender) %></th>
