既存顧客の電話番号と紐付けてLINE連携登録する処理

--- a/app/views/customers/new_with_line_non_tel_number.html.erb
+++ b/app/views/customers/new_with_line_non_tel_number.html.erb
@@ -8,4 +8,4 @@
   </div>
 </div>
 
-<%= render 'form_tel_number', customer: @customer, url: { action: :new_with_line_non_tel_number } %>
+<%= render 'form', customer: @customer, url: { action: :create_with_line } %>
