--- a/app/views/company/settings/_form.html.erb
+++ b/app/views/company/settings/_form.html.erb
@@ -88,20 +88,12 @@
               <% end %>
 
               <div class="form-group">
-                <% line_channel_secret_err = true if company.errors.include?(:line_channel_secret) %>
-                <%= form.label :line_channel_secret %>
-                <%= form.text_field :line_channel_secret, { class: "form-control #{ line_channel_secret_err ? 'is-invalid' : '' }", placeholder: 'チャネルシークレット', maxlength: 255 } %>
-                <% if line_channel_secret_err %>
-                  <span class="error invalid-feedback"><%= company.errors.full_messages_for(:line_channel_secret).first %></span>
-                <% end %>
-              </div>
-
-              <div class="form-group">
-                <% line_channel_token_err = true if company.errors.include?(:line_channel_token) %>
-                <%= form.label :line_channel_token %>
-                <%= form.text_field :line_channel_token, { class: "form-control #{ line_channel_token_err ? 'is-invalid' : '' }", placeholder: 'チャネルアクセストークン', maxlength: 255 } %>
-                <% if line_channel_token_err %>
-                  <span class="error invalid-feedback"><%= company.errors.full_messages_for(:line_channel_token).first %></span>
+                <% visit_confirmation_code_err = true if company.errors.include?(:visit_confirmation_code) %>
+                <%= form.label :visit_confirmation_code %>
+                <%= form.text_field :visit_confirmation_code, { class: "form-control #{ visit_confirmation_code_err ? 'is-invalid' : '' }", placeholder: 'チャネルシークレット', minlength: 4, maxlength: 4, required: true } %>
+                <small>*設定から24時間おきに変更されます。</small>
+                <% if visit_confirmation_code_err %>
+                  <span class="error invalid-feedback"><%= company.errors.full_messages_for(:visit_confirmation_code).first %></span>
                 <% end %>
               </div>
 
@@ -109,6 +101,7 @@
 
             <div class="card-footer">
               <%= form.submit class: 'btn btn-primary', data: { confirm: 'よろしいですか?' } %>
+              <a href="<%= company_setting_path %>" class="btn btn-default float-right">　戻る　</a>
             </div>
           <% end %>
         </div>
