--- a/app/views/company/settings/show.html.erb
+++ b/app/views/company/settings/show.html.erb
@@ -41,12 +41,8 @@
             <td><%= image_tag @company.line_qr_code.try(:thumb_220).try(:url) if @company.line_qr_code.present? %></td>
           </tr>
           <tr>
-            <th class="text-nowrap"><%= Company.human_attribute_name(:line_channel_secret) %></th>
-            <td><%= @company.line_channel_secret.to_s %></td>
-          </tr>
-          <tr>
-            <th class="text-nowrap"><%= Company.human_attribute_name(:line_channel_token) %></th>
-            <td><%= @company.line_channel_token.to_s %></td>
+            <th class="text-nowrap"><%= Company.human_attribute_name(:visit_confirmation_code) %></th>
+            <td><%= @company.visit_confirmation_code.to_s %></td>
           </tr>
         </tbody>
       </table>
