デザイン調整

--- a/app/views/customers/index.html.erb
+++ b/app/views/customers/index.html.erb
@@ -110,8 +110,8 @@
             <th><%= Customer.human_attribute_name(:age) %></th>
             <th><%= Customer.human_attribute_name(:tel_number) %></th>
             <th><%= Customer.human_attribute_name(:birthday) %></th>
+            <th><%= Customer.human_attribute_name(:line_receiving) %></th>
             <th><%= Customer.human_attribute_name(:last_vist_date) %></th>
-            <th>LINE通知</th>
           </tr>
         </thead>
         <tbody>
