来店履歴作成処理枠

--- a/app/views/customers/show.html.erb
+++ b/app/views/customers/show.html.erb
@@ -89,7 +89,7 @@
 
         <div class="card-footer clearfix">
           <%= paginate @visited_logs %>
-          <a href="#" class="btn btn-sm btn-primary float-right mt-1">履歴作成</a>
+          <a href="<%= new_customer_visited_log_path(company_code: @company.code, customer_id: @customer.id) %>" class="btn btn-sm btn-primary float-right mt-1">履歴作成</a>
         </div>
       </div>
     </div>
