--- a/app/views/customers/index.html.erb
+++ b/app/views/customers/index.html.erb
@@ -1,9 +1,10 @@
 <%= render 'content_header', active_breadcrumb_item: Const::View::Name::CUSTOMER_INDEX %>
 
+
 <section class="content">
   <div class="card <%= 'collapsed-card' unless @search.inputed? %>">
     <div class="card-header">
-      <h3 class="card-title">検索</h3>
+      <h3 class="card-title">詳細検索</h3>
 
       <div class="card-tools">
         <button type="button" class="btn btn-tool" data-card-widget="collapse"><i class="fas fa-<%= @search.inputed? ? 'minus' : 'plus' %>"></i>
@@ -70,7 +71,7 @@
                   <%= f.check_box(:line_registed, {}, checked_value = 'true', unchecked_value = '' ) %>
                 </span>
               </div>
-              <%= f.label :line_registed , class: 'form-control' do 'LINE登録済み' end %>
+              <%= f.label :line_registed , class: 'form-control' do 'LINE登録済' end %>
             </div>
           </div>
 
@@ -96,58 +97,95 @@
     </div>
   </div>
 
-  <div class="card">
-    <div class="card-body">
-      <%= paginate @customers %>
+  <div class="row">
+    <div class="col-md-12">
+      <div class="card card-primary card-outline">
+        <div class="card-header">
+          <% page = params[:page].present? ? params[:page].to_i : 1 %>
+          <h3 class="card-title"><%= CustomerSearch::DEFAULT_PER * params[:page].to_i + 1 %>-<%= CustomerSearch::DEFAULT_PER * (params[:page].present? ? params[:page].to_i : 1) %>/<%= @customers.total_count %></h3>
 
-      <table class="table table-bordered">
-        <thead>
-          <tr>
-            <th style="width: 10px" class="text-nowrap"><%= @customers.total_count %> <small>名</small></th>
-            <th class="align-items-center"><%= Customer.human_attribute_name(:name) %></th>
-            <th><%= Customer.human_attribute_name(:name_kana) %></th>
-            <th><%= Customer.human_attribute_name(:gender) %></th>
-            <th><%= Customer.human_attribute_name(:age) %></th>
-            <th><%= Customer.human_attribute_name(:tel_number) %></th>
-            <th><%= Customer.human_attribute_name(:birthday) %></th>
-            <th><%= Customer.human_attribute_name(:line_receiving) %></th>
-            <th><%= Customer.human_attribute_name(:last_vist_date) %></th>
-          </tr>
-        </thead>
-        <tbody>
+          <div class="card-tools">
+            <div class="input-group input-group-sm">
+              <input type="text" class="form-control" placeholder="Search Mail">
+              <div class="input-group-append">
+                <div class="btn btn-primary">
+                  <i class="fas fa-search"></i>
+                </div>
+              </div>
+            </div>
+          </div>
+          <!-- /.card-tools -->
+        </div>
+        <!-- /.card-header -->
+        <div class="card-body p-0">
+          <div class="mailbox-controls">
+            <%= paginate @customers %>
+          </div>
+          <div class="table-responsive">
+            <table class="table table-hover table-striped">
+              <tbody>
+              <thead>
+                <tr>
+                  <th>未読</th>
+                  <th>名前</th>
+                  <th>性別</th>
+                  <th>年齢</th>
+                  <th>LINE?</th>
+                  <th>最終来店</th>
+                </tr>
+              </thead>
 
-          <% @customers.each_with_index do |customer, i| %>
-            <tr>
-              <td class="text-nowrap align-middle align-items-center">
-                <%= customer.id %>
-              </td>
-              <td class="align-middle">
-                <%= link_to customer.name.to_s, customer_path(@company.code, customer), { class: 'text-info' } %>
-              </td>
-              <td class="align-middle"><%= customer.name_kana.to_s %></td>
-              <td class="align-middle"><%= Customer.human_attribute_name("gender.#{ customer.gender }") if customer.gender %></td>
-              <td class="align-middle"><%= customer.age %></td>
-              <td class="align-middle"><%= customer.formatted_tel_number.to_s %></td>
-              <td class="align-middle"><%= customer.birthday.strftime("%Y年%m月%d日") if customer.birthday %></td>
-              <td class="align-middle">
-                <% user = customer.user %>
-                <% if user.try(:unread_user_line_message?) %>
-                  <%= link_to '未読', new_line_message_customer_path(@company.code, customer), class: 'btn btn-sm btn-success float-left' %>
-                <% elsif customer.line? %>
-                  <%= link_to 'LINE', new_line_message_customer_path(@company.code, customer), { class: 'btn btn-sm btn-outline-success float-left' } %>
-                <% end %>
-              </td>
-              <td class="align-middle"><%= customer.last_vist_date %></td>
-            </tr>
-          <% end %>
+              <% @customers.each_with_index do |customer, i| %>
+                <tr>
+                  <% user = customer.user %>
+                  <% if user.try(:unread_user_line_message?) %>
+                    <td>
+                      <a href="<%= new_line_message_customer_path(@company.code, customer) %>">
+                        <i class="fas fa-star-o text-success"></i>
+                      </a>
+                    </td>
+                  <% else %>
+                    <td></td>
+                  <% end %>
+                  <td class="text-nowrap">
+                    <%= link_to customer.name.to_s, customer_path(@company.code, customer), { class: 'text-info' } %>
+                  </td>
+                  <td class="align-middle">
+                    <% if customer.women? %>
+                      <i class="fas fa-female text-red"></i>
+                    <% elsif customer.men? %>
+                      <i class="fas fa-male text-black"></i>
+                    <% end %>
+                  </td>
+                  <td class="align-middle"><%= customer.age %></td>
+                  <td class="align-middle">
+                    <% user = customer.user %>
+                    <% if customer.line? %>
+                      <%= link_to 'LINE', new_line_message_customer_path(@company.code, customer), { class: 'btn btn-sm btn-outline-success float-left' } %>
+                    <% end %>
+                  </td>
+                  <td class="align-middle"><%= customer.last_vist_date %></td>
+                </tr>
+              <% end %>
 
-        </tbody>
-      </table>
-
-      <%= paginate @customers %>
+              </tbody>
+            </table>
+            <!-- /.table -->
+          </div>
+          <!-- /.mail-box-messages -->
+        </div>
+        <div class="card-footer p-0">
+          <div class="mailbox-controls">
+            <%= paginate @customers %>
+          </div>
+        </div>
+      </div>
+      <!-- /.card -->
     </div>
-    <div class="card-footer">
-      <a href="<%= new_customer_path(company_code: @company.code ) %>" class="btn btn-sm btn-primary float-left mt-1">新規作成</a>
-    </div>
+    <!-- /.col -->
   </div>
+  <!-- /.row -->
 </section>
+
+
+
