--- a/app/views/customers/index.html.erb
+++ b/app/views/customers/index.html.erb
@@ -98,7 +98,6 @@
 
   <div class="row">
     <div class="col-md-3">
-      <a href="compose.html" class="btn btn-success btn-block mb-3">LINE一斉送信</a>
 
       <div class="card">
         <div class="card-header">
@@ -167,6 +166,12 @@
         <div class="card-header">
           <% page = params[:page].present? ? params[:page].to_i : 1 %>
           <h3 class="card-title"><%= CustomerSearch::DEFAULT_PER * params[:page].to_i + 1 %>-<%= CustomerSearch::DEFAULT_PER * (params[:page].present? ? params[:page].to_i : 1) %>/<%= @customers.total_count %></h3>
+
+          <div class="card-tools">
+            <div class="input-group input-group-sm">
+              <a href="#" class="btn btn-success btn-block mb-3">LINE一斉送信</a>
+            </div>
+          </div>
         </div>
 
         <div class="card-body p-0">
