--- a/app/views/customers/index.html.erb
+++ b/app/views/customers/index.html.erb
@@ -85,9 +85,18 @@
             </div>
           </div>
 
-          <div class="col-md-2 mb-2">
+          <div class="col-md-3 mb-2">
             <div class="input-group">
-              <%= f.submit "検　索", { class: 'btn btn-info rounded-pill' } %>
+              <%= f.submit "検　索", { class: 'btn btn-primary rounded-pill' } %>
+              <a href="javascript: void(0)" id="clear_button" class="ml-2 btn btn-outline-dark rounded-pill">クリア</a>
+              <%= javascript_tag do %>
+                $(function() {
+                  $('#clear_button').on('click', function(){
+                    $('input[type="text"], select').val('');
+                    $(':checkbox').prop('checked', false);
+                  });
+                });
+              <% end %>
             </div>
           </div>
         </div>
